--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "src/index.js",
   "repository": {},
   "license": "MIT",
+  "browserslist": [
+    "> 2%",
+    "last 2 versions"
+  ],
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
@@ -13,6 +17,16 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^2.6.1"
+    "css-loader": "^0.28.3",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.5",
+    "react-hot-loader": "next",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "scripts": {
+    "start": "./node_modules/.bin/webpack-dev-server"
   }
 }
