--- a/.babelrc
+++ b/.babelrc
@@ -13,9 +13,11 @@
         "loose": true
       }
     ],
-    "react"
+    "react",
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
