--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.0.0",
     "css-loader": "^0.28.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "react-hot-loader": "next",
@@ -37,6 +40,6 @@
   },
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
+    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js"
   }
 }
