--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
@@ -30,9 +31,11 @@
     "css-loader": "^0.28.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "react-hot-loader": "next",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.1",
@@ -40,6 +43,8 @@
   },
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
+    "prestart": "rimraf ./public/*",
+    "prebuild": "rimraf ./public/*",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js"
   }
 }
