--- a/package.json
+++ b/package.json
@@ -1,50 +1,65 @@
 {
-  "name": "lista-tarefas-react",
-  "version": "1.0.0",
-  "main": "src/index.js",
-  "repository": {},
-  "license": "MIT",
-  "browserslist": [
-    "> 2%",
-    "last 2 versions"
-  ],
-  "dependencies": {
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "node-uuid": "^1.4.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+  "scripts": {
+    "start": "yarn dev",
+    "dev": "webpack-dashboard -- node server.js",
+    "test": "jest --coverage",
+    "test:watch": "yarn test -- --watch",
+    "lint": "standard --parser babel-eslint --verbose | snazzy",
+    "lint:watch": "gulp",
+    "lint:fix": "standard --fix",
+    "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --progress --config webpack/prod.config -p",
+    "build:analyzer": "cross-env ANALYZER=true yarn build",
+    "storybook": "start-storybook -p 6006 -c storybook",
+    "storybook:build": "cross-env NODE_ENV=production BABEL_ENV=production build-storybook -c storybook",
+    "update-packages": "node scripts/update.js"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.css$": "<rootDir>/config/CSSStub.js"
+    }
+  },
+  "standard": {
+    "globals": [
+      "it",
+      "expect"
+    ]
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
+    "@storybook/react": "^3.2.8",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.28.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "inline-manifest-webpack-plugin": "^3.0.1",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.5",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.16",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "gulp": "^3.9.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.1.0",
     "react-hot-loader": "next",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "react-test-renderer": "^15.6.1",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.3",
+    "standard-loader": "^6.0.1",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dashboard": "^1.0.0-5",
+    "webpack-dev-server": "^2.8.2"
   },
-  "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server",
-    "prestart": "rimraf ./public/*",
-    "prebuild": "rimraf ./public/*",
-    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js"
+  "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "preact": "^8.2.5",
+    "preact-compat": "^3.17.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
