--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "next",
     "react-test-renderer": "^15.6.1",
+    "sass-loader": "^6.0.6",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
@@ -56,10 +58,15 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "gh-pages": "^1.0.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.19.1",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
